force-app/main/default/objects/Movie__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <referenceTo>Actor__c</referenceTo>
    <relationshipLabel>Movies</relationshipLabel>
    <relationshipName>Movies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>