force-app/main/default/objects/Movie__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Length of movie</description>
    <label>Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>