force-app/main/default/objects/Movie__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Movie category</description>
    <label>Genre</label>
    <referenceTo>Genre__c</referenceTo>
    <relationshipLabel>Movies</relationshipLabel>
    <relationshipName>Movies</relationshipName>
    <type>Lookup</type>
</CustomField>