force-app/main/default/objects/Movie__c/fields/Is_Premium__c.field-meta.xml
<CustomField>
    <fullName>Is_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If only premium users can watch</description>
    <label>Is Premium</label>
    <type>Checkbox</type>
</CustomField>