force-app/main/default/objects/Movie__c/fields/Movie_Code__c.field-meta.xml
<CustomField>
    <fullName>Movie_Code__c</fullName>
    <description>Unique movie identifier (MOV-001)</description>
    <label>Movie Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>