force-app/main/default/objects/Movie__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Movie Title</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>