force-app/main/default/objects/Movie__c/fields/Popularity__c.field-meta.xml
<CustomField>
    <fullName>Popularity__c</fullName>
    <description>Calculated from ratings + watchlist</description>
    <label>Popularity Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>