force-app/main/default/objects/Movie__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Release date</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>